# Evil-Hangman

./: CMakeLists.txt  EvilHangman.cpp  FamilySet.cpp  FamilySet.h  README.md
.github/classroom/: autograding.json
sample_solutions/: EvilHangman_mac  readme.md
test_data/: family_10_a_no_pattern.txt  family_10_b_no_pattern.txt  family_11_a_no_pattern.txt  family_11_b_no_pattern.txt  family_12_a_no_pattern.txt  family_12_b_no_pattern.txt  family_13_a_no_pattern.txt  family_13_b_no_pattern.txt  family_14_a_no_pattern.txt  family_14_b_no_pattern.txt  family_15_a_no_pattern.txt  family_15_b_no_pattern.txt  family_16_a_no_pattern.txt  family_16_b_no_pattern.txt  family_17_a_no_pattern.txt  family_17_b_no_pattern.txt  family_18_a_no_pattern.txt  family_18_b_no_pattern.txt  family_19_a_no_pattern.txt  family_19_b_no_pattern.txt  family_20_a_no_pattern.txt  family_20_b_no_pattern.txt  family_sizes.txt  setfamily_words_a_no_pattern.txt  setfamily_words_b_with_pattern.txt
unit_tests/: FamilySet_Tests.cpp
